* i386.md (abssf,absdf): Use vector operands for SSE 	(abssf2_ifs, absdf2_ifs, absdf2_ifs_rex64 and splitters): Update for 	vector operand.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58446 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Wed Oct 23 12:01:21 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (abssf,absdf): Use vector operands for SSE
+	(abssf2_ifs, absdf2_ifs, absdf2_ifs_rex64 and splitters): Update for
+	vector operand.
+
 2002-10-21  Richard Henderson  <rth@redhat.com>
 
 	* config/i386/i386.c (ix86_function_ok_for_sibcall): Look at
