--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -18572,8 +18572,8 @@
 	       (const_string "TI")))])
 
 (define_insn "*movti_rex64"
-  [(set (match_operand:TI 0 "nonimmediate_operand" "=r,o,x,mx,x")
-	(match_operand:TI 1 "general_operand" "riFo,riF,O,x,m"))]
+  [(set (match_operand:TI 0 "nonimmediate_operand" "=r,o,x,x,xm")
+	(match_operand:TI 1 "general_operand" "riFo,riF,O,xm,x"))]
   "TARGET_64BIT
    && (GET_CODE (operands[0]) != MEM || GET_CODE (operands[1]) != MEM)"
 {
