* i386.md (abs splitters): Do not produce nested subregs.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58467 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Wed Oct 23 22:48:44 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (abs splitters): Do not produce nested subregs.
+
 Wed Oct 23 12:42:32 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (movti_rex64): Fix constraints.
