--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -10228,7 +10228,7 @@
 	(and:TI (subreg:TI (match_dup 0) 0)
 		(subreg:TI (match_dup 1) 0)))]
 {
-  operands[0] = gen_rtx_SUBREG (V2DFmode, operands[0], 0);
+  operands[0] = simplify_gen_subreg (V2DFmode, operands[0], DFmode, 0);
   /* Avoid possible reformating on the operands.  */
   if (TARGET_SSE_PARTIAL_REGS && !optimize_size)
     emit_insn (gen_sse2_unpcklpd (operands[0], operands[0], operands[0]));
@@ -10244,7 +10244,7 @@
 	(and:TI (subreg:TI (match_dup 0) 0)
 		(subreg:TI (match_dup 1) 0)))]
 {
-  operands[0] = gen_rtx_SUBREG (V2DFmode, operands[0], 0);
+  operands[0] = simplify_gen_subreg (V2DFmode, operands[0], DFmode, 0);
   /* Operand2 should match operand0, as the opposite case is handled above.  */
   if (REGNO (operands[2]) != REGNO (operands[0]))
     abort ();
