* config/i386/i386.c (local_symbolic_operand): Move LABEL_REF test 	after CONST test.
	* gcc.dg/20021023-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@58471 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-10-23  Jakub Jelinek  <jakub@redhat.com>
 
+	* config/i386/i386.c (local_symbolic_operand): Move LABEL_REF test
+	after CONST test.
+
+2002-10-23  Jakub Jelinek  <jakub@redhat.com>
+
 	* config/i386/i386.md (subdi3_1): Add call to ix86_binary_operator_ok.
 
 2002-10-15  Jim Wilson  <wilson@redhat.com>
