--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20021023-1.c: New test.
+
 2002-10-21  Zack Weinberg  <zack@codesourcery.com>
 
 	* gcc.dg/noncompile/920923-1.c: Prevent spurious regressions with
