2002-10-24  Tom Tromey  <tromey@redhat.com>
	* java/lang/natRuntime.cc (_Jv_SetDLLSearchPath): New function.
	(_Jv_FindSymbolInExecutable): Removed argument name.
	* java/lang/natSystem.cc (init_properties): Call _Jv_SetDLLSearchPath
	if java.library.path is set.

	* gij.cc (help): Document --showversion.
	(version): Don't exit.
	(main): Handle --showversion.  Exit if --version given.

2002-10-24  Tom Tromey  <tromey@redhat.com>

	* gcj.texi (Invoking gij): Document --showversion.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@58528 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-24  Tom Tromey  <tromey@redhat.com>
+
+	* gcj.texi (Invoking gij): Document --showversion.
+
 2002-10-21  Matthias Klose  <doko@debian.org>
 
 	* Backport, without whitespace change:
