--- a/gcc/java/gcj.texi
+++ b/gcc/java/gcj.texi
@@ -732,7 +732,7 @@ gij [@option{OPTION}] @dots{} @var{JARFILE} [@var{ARGS}@dots{}]
 gij [@option{-jar}] [@option{OPTION}] @dots{} @var{CLASS} [@var{ARGS}@dots{}]
   [@option{-D}@var{name}[=@var{value}]@dots{}]
   [@option{-ms=}@var{number}] [@option{-mx=}@var{number}]
-  [@option{--version}] [@option{--help}]
+  [@option{--showversion}] [@option{--version}] [@option{--help}]
 @c man end
 @c man begin SEEALSO gij
 gcc(1), gcj(1), gcjh(1), jv-scan(1), jcf-dump(1), gfdl(7),
@@ -791,6 +791,9 @@ as the name of a jar file, not a class.
 
 @item --help
 Print help, then exit.
+
+@item --showversion
+Print version number and continue.
 
 @item --version
 Print version number, then exit.
