--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,14 @@
+2002-10-24  Tom Tromey  <tromey@redhat.com>
+
+	* java/lang/natRuntime.cc (_Jv_SetDLLSearchPath): New function.
+	(_Jv_FindSymbolInExecutable): Removed argument name.
+	(init_properties): Call _Jv_SetDLLSearchPath if
+	java.library.path is set.
+
+	* gij.cc (help): Document --showversion.
+	(version): Don't exit.
+	(main): Handle --showversion.  Exit if --version given.
+
 2002-10-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* Makefile.am (all-multi): Fix multilib parallel build.
