--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -9532,12 +9532,15 @@
 	     in register.  */
 	  rtx reg = gen_reg_rtx (SFmode);
 	  rtx dest = operands[0];
+	  rtx imm = gen_lowpart (SFmode, gen_int_mode (0x80000000, SImode));
 
 	  operands[1] = force_reg (SFmode, operands[1]);
 	  operands[0] = force_reg (SFmode, operands[0]);
-	  emit_move_insn (reg,
-			  gen_lowpart (SFmode,
-				       gen_int_mode (0x80000000, SImode)));
+	  reg = force_reg (V4SFmode,
+			   gen_rtx_CONST_VECTOR (V4SFmode,
+			     gen_rtvec (4, imm, CONST0_RTX (SFmode),
+					CONST0_RTX (SFmode),
+					CONST0_RTX (SFmode))));
 	  emit_insn (gen_negsf2_ifs (operands[0], operands[1], reg));
 	  if (dest != operands[0])
 	    emit_move_insn (dest, operands[0]);
@@ -9555,8 +9558,8 @@
 
 (define_insn "negsf2_ifs"
   [(set (match_operand:SF 0 "nonimmediate_operand" "=x#fr,x#fr,f#xr,rm#xf")
-	(neg:SF (match_operand:SF 1 "nonimmediate_operand" "0,x#fr,0,0")))
-   (use (match_operand:SF 2 "nonmemory_operand" "x,0#x,*g#x,*g#x"))
+	(neg:SF (match_operand:SF 1 "nonimmediate_operand" "0,xm#fr,0,0")))
+   (use (match_operand:V4SF 2 "nonimmediate_operand" "xm,0,*x*rm,*x*rm"))
    (clobber (reg:CC 17))]
   "TARGET_SSE
    && (reload_in_progress || reload_completed
@@ -9577,7 +9580,7 @@
 (define_split
   [(set (match_operand:SF 0 "register_operand" "")
 	(neg:SF (match_operand:SF 1 "register_operand" "")))
-   (use (match_operand:SF 2 "" ""))
+   (use (match_operand:V4SF 2 "" ""))
    (clobber (reg:CC 17))]
   "reload_completed && !SSE_REG_P (operands[0])"
   [(parallel [(set (match_dup 0)
@@ -9587,7 +9590,7 @@
 (define_split
   [(set (match_operand:SF 0 "register_operand" "")
 	(neg:SF (match_operand:SF 1 "register_operand" "")))
-   (use (match_operand:SF 2 "register_operand" ""))
+   (use (match_operand:V4SF 2 "nonimmediate_operand" ""))
    (clobber (reg:CC 17))]
   "reload_completed && SSE_REG_P (operands[0])"
   [(set (subreg:TI (match_dup 0) 0)
@@ -9666,7 +9669,7 @@
 	{
 	  /* Using SSE is tricky, since we need bitwise negation of -0
 	     in register.  */
-	  rtx reg = gen_reg_rtx (DFmode);
+	  rtx reg;
 #if HOST_BITS_PER_WIDE_INT >= 64
 	  rtx imm = gen_int_mode (((HOST_WIDE_INT)1) << 63, DImode);
 #else
@@ -9676,7 +9679,9 @@
 
 	  operands[1] = force_reg (DFmode, operands[1]);
 	  operands[0] = force_reg (DFmode, operands[0]);
-	  emit_move_insn (reg, gen_lowpart (DFmode, imm));
+	  reg = force_reg (V2DFmode,
+			   gen_rtx_CONST_VECTOR (V2DFmode,
+			     gen_rtvec (2, imm, CONST0_RTX (DFmode))));
 	  emit_insn (gen_negdf2_ifs (operands[0], operands[1], reg));
 	  if (dest != operands[0])
 	    emit_move_insn (dest, operands[0]);
@@ -9694,8 +9699,8 @@
 
 (define_insn "negdf2_ifs"
   [(set (match_operand:DF 0 "nonimmediate_operand" "=Y#fr,Y#fr,f#Yr,rm#Yf")
-	(neg:DF (match_operand:DF 1 "nonimmediate_operand" "0,Y#fr,0,0")))
-   (use (match_operand:DF 2 "nonmemory_operand" "Y,0,*g#Y,*g#Y"))
+	(neg:DF (match_operand:DF 1 "nonimmediate_operand" "0,Ym#fr,0,0")))
+   (use (match_operand:V2DF 2 "nonimmediate_operand" "Ym,0,*Y*rm,*Y*rm"))
    (clobber (reg:CC 17))]
   "!TARGET_64BIT && TARGET_SSE2
    && (reload_in_progress || reload_completed
@@ -9706,7 +9711,7 @@
 (define_insn "*negdf2_ifs_rex64"
   [(set (match_operand:DF 0 "nonimmediate_operand" "=Y#fr,Y#fr,fm#Yr,r#Yf")
 	(neg:DF (match_operand:DF 1 "nonimmediate_operand" "0,Y#fr,0,0")))
-   (use (match_operand:DF 2 "general_operand" "Y,0,*g#Yr,*rm"))
+   (use (match_operand:V2DF 2 "nonimmediate_operand" "Ym,0,*Y*rm,*Y*rm"))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && TARGET_SSE2
    && (reload_in_progress || reload_completed
@@ -9717,7 +9722,7 @@
 (define_split
   [(set (match_operand:DF 0 "memory_operand" "")
 	(neg:DF (match_operand:DF 1 "memory_operand" "")))
-   (use (match_operand:DF 2 "" ""))
+   (use (match_operand:V2DF 2 "" ""))
    (clobber (reg:CC 17))]
   ""
   [(parallel [(set (match_dup 0)
@@ -9727,7 +9732,7 @@
 (define_split
   [(set (match_operand:DF 0 "register_operand" "")
 	(neg:DF (match_operand:DF 1 "register_operand" "")))
-   (use (match_operand:DF 2 "" ""))
+   (use (match_operand:V2DF 2 "" ""))
    (clobber (reg:CC 17))]
   "reload_completed && !SSE_REG_P (operands[0])
    && (!TARGET_64BIT || FP_REG_P (operands[0]))"
@@ -9738,7 +9743,7 @@
 (define_split
   [(set (match_operand:DF 0 "register_operand" "")
 	(neg:DF (match_operand:DF 1 "register_operand" "")))
-   (use (match_operand:DF 2 "" ""))
+   (use (match_operand:V2DF 2 "" ""))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && reload_completed && GENERAL_REG_P (operands[0])"
   [(parallel [(set (match_dup 0)
@@ -9750,22 +9755,18 @@
 
 (define_split
   [(set (match_operand:DF 0 "register_operand" "")
-	(neg:DF (match_operand:DF 1 "register_operand" "")))
-   (use (match_operand:DF 2 "register_operand" ""))
+	(neg:DF (match_operand:DF 1 "nonimmediate_operand" "")))
+   (use (match_operand:V2DF 2 "nonimmediate_operand" ""))
    (clobber (reg:CC 17))]
   "reload_completed && SSE_REG_P (operands[0])"
   [(set (subreg:TI (match_dup 0) 0)
 	(xor:TI (subreg:TI (match_dup 1) 0)
 		(subreg:TI (match_dup 2) 0)))]
 {
+  operands[0] = simplify_gen_subreg (V2DFmode, operands[0], DFmode, 0);
   /* Avoid possible reformating on the operands.  */
   if (TARGET_SSE_PARTIAL_REGS && !optimize_size)
-    {
-      rtx op = gen_rtx_SUBREG (V2DFmode, operands[1], 0);
-      emit_insn (gen_sse2_unpcklpd (op, op, op));
-      op = gen_rtx_SUBREG (V2DFmode, operands[2], 0);
-      emit_insn (gen_sse2_unpcklpd (op, op, op));
-    }
+    emit_insn (gen_sse2_unpcklpd (operands[0], operands[0], operands[0]));
   if (operands_match_p (operands[0], operands[2]))
     {
       rtx tmp;
@@ -10005,10 +10006,11 @@
 	  operands[1] = force_reg (SFmode, operands[1]);
 	  operands[0] = force_reg (SFmode, operands[0]);
 	  imm = gen_lowpart (SFmode, gen_int_mode(~0x80000000, SImode));
-	  emit_move_insn (reg,
-			  gen_rtx_CONST_VECTOR (V4SFmode,
-			  gen_rtvec (4, imm, CONST0_RTX (SFmode),
-				     CONST0_RTX (SFmode), CONST0_RTX (SFmode))));
+	  reg = force_reg (V4SFmode,
+			   gen_rtx_CONST_VECTOR (V4SFmode,
+			   gen_rtvec (4, imm, CONST0_RTX (SFmode),
+				      CONST0_RTX (SFmode),
+				      CONST0_RTX (SFmode))));
 	  emit_insn (gen_abssf2_ifs (operands[0], operands[1], reg));
 	  if (dest != operands[0])
 	    emit_move_insn (dest, operands[0]);
@@ -10158,9 +10160,9 @@
 
 	  /* Produce LONG_DOUBLE with the proper immediate argument.  */
 	  imm = gen_lowpart (DFmode, imm);
-	  emit_move_insn (reg,
-			  gen_rtx_CONST_VECTOR (V2DFmode,
-			  gen_rtvec (2, imm, CONST0_RTX (DFmode))));
+	  reg = force_reg (V2DFmode,
+			   gen_rtx_CONST_VECTOR (V2DFmode,
+			   gen_rtvec (2, imm, CONST0_RTX (DFmode))));
 	  emit_insn (gen_absdf2_ifs (operands[0], operands[1], reg));
 	  if (dest != operands[0])
 	    emit_move_insn (dest, operands[0]);
@@ -10189,7 +10191,7 @@
 
 (define_insn "*absdf2_ifs_rex64"
   [(set (match_operand:DF 0 "nonimmediate_operand" "=Y#fr,Y#fr,mf#Yr")
-	(abs:DF (match_operand:DF 1 "nonimmediate_operand" "0,Y,0")))
+	(abs:DF (match_operand:DF 1 "nonimmediate_operand" "0,Ym,0")))
    (use (match_operand:V2DF 2 "nonimmediate_operand" "Ym,*0,*Y*rm"))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && TARGET_SSE2
@@ -13691,7 +13693,7 @@
 			    (match_operand:SI 3 "" "")))])]
   "!TARGET_64BIT"
 {
-  ix86_expand_call (NULL, operands[0], operands[1], operands[2], operands[3]);
+  ix86_expand_call (NULL, operands[0], operands[1], operands[2], operands[3], 0);
   DONE;
 })
 
@@ -13736,7 +13738,17 @@
    (use (match_operand 2 "" ""))]
   ""
 {
-  ix86_expand_call (NULL, operands[0], operands[1], operands[2], NULL);
+  ix86_expand_call (NULL, operands[0], operands[1], operands[2], NULL, 0);
+  DONE;
+})
+
+(define_expand "sibcall"
+  [(call (match_operand:QI 0 "" "")
+	 (match_operand 1 "" ""))
+   (use (match_operand 2 "" ""))]
+  ""
+{
+  ix86_expand_call (NULL, operands[0], operands[1], operands[2], NULL, 1);
   DONE;
 })
 
@@ -13777,21 +13789,28 @@
 (define_insn "*call_1_rex64"
   [(call (mem:QI (match_operand:DI 0 "call_insn_operand" "rsm"))
 	 (match_operand 1 "" ""))]
-  "TARGET_64BIT"
+  "!SIBLING_CALL_P (insn) && TARGET_64BIT"
 {
   if (constant_call_address_operand (operands[0], QImode))
-    {
-      if (SIBLING_CALL_P (insn))
-	return "jmp\t%P0";
-      else
-	return "call\t%P0";
-    }
-  if (SIBLING_CALL_P (insn))
-    return "jmp\t%A0";
-  else
-    return "call\t%A0";
+    return "call\t%P0";
+  return "call\t%A0";
 }
   [(set_attr "type" "call")])
+
+(define_insn "*sibcall_1_rex64"
+  [(call (mem:QI (match_operand:DI 0 "constant_call_address_operand" ""))
+	 (match_operand 1 "" ""))]
+  "SIBLING_CALL_P (insn) && TARGET_64BIT"
+  "jmp\t%P0"
+  [(set_attr "type" "call")])
+
+(define_insn "*sibcall_1_rex64_v"
+  [(call (mem:QI (reg:DI 40))
+	 (match_operand 0 "" ""))]
+  "SIBLING_CALL_P (insn) && TARGET_64BIT"
+  "jmp\t*%%r11"
+  [(set_attr "type" "call")])
+
 
 ;; Call subroutine, returning value in operand 0
 
@@ -13805,7 +13824,7 @@
   "!TARGET_64BIT"
 {
   ix86_expand_call (operands[0], operands[1], operands[2],
-		    operands[3], operands[4]);
+		    operands[3], operands[4], 0);
   DONE;
 })
 
@@ -13817,7 +13836,19 @@
   ;; Operand 2 not used on the i386.
   ""
 {
-  ix86_expand_call (operands[0], operands[1], operands[2], operands[3], NULL);
+  ix86_expand_call (operands[0], operands[1], operands[2], operands[3], NULL, 0);
+  DONE;
+})
+
+(define_expand "sibcall_value"
+  [(set (match_operand 0 "" "")
+	(call (match_operand:QI 1 "" "")
+	      (match_operand:SI 2 "" "")))
+   (use (match_operand:SI 3 "" ""))]
+  ;; Operand 2 not used on the i386.
+  ""
+{
+  ix86_expand_call (operands[0], operands[1], operands[2], operands[3], NULL, 1);
   DONE;
 })
 
@@ -13840,7 +13871,7 @@
   ix86_expand_call ((TARGET_FLOAT_RETURNS_IN_80387
 		     ? gen_rtx_REG (XCmode, FIRST_FLOAT_REG) : NULL),
 		    operands[0], const0_rtx, GEN_INT (SSE_REGPARM_MAX - 1),
-		    NULL);
+		    NULL, 0);
 
   for (i = 0; i < XVECLEN (operands[2], 0); i++)
     {
@@ -18132,20 +18163,28 @@
   [(set (match_operand 0 "" "")
 	(call (mem:QI (match_operand:DI 1 "call_insn_operand" "rsm"))
 	      (match_operand:DI 2 "" "")))]
-  "TARGET_64BIT"
+  "!SIBLING_CALL_P (insn) && TARGET_64BIT"
 {
   if (constant_call_address_operand (operands[1], QImode))
-    {
-      if (SIBLING_CALL_P (insn))
-	return "jmp\t%P1";
-      else
-	return "call\t%P1";
-    }
-  if (SIBLING_CALL_P (insn))
-    return "jmp\t%A1";
-  else
-    return "call\t%A1";
+    return "call\t%P1";
+  return "call\t%A1";
 }
+  [(set_attr "type" "callv")])
+
+(define_insn "*sibcall_value_1_rex64"
+  [(set (match_operand 0 "" "")
+	(call (mem:QI (match_operand:DI 1 "constant_call_address_operand" ""))
+	      (match_operand:DI 2 "" "")))]
+  "SIBLING_CALL_P (insn) && TARGET_64BIT"
+  "jmp\t%P1"
+  [(set_attr "type" "callv")])
+
+(define_insn "*sibcall_value_1_rex64_v"
+  [(set (match_operand 0 "" "")
+	(call (mem:QI (reg:DI 40))
+	      (match_operand:DI 1 "" "")))]
+  "SIBLING_CALL_P (insn) && TARGET_64BIT"
+  "jmp\t*%%r11"
   [(set_attr "type" "callv")])
 
 (define_insn "trap"
@@ -18208,6 +18247,16 @@
   [(set_attr "type" "ssemov")
    (set_attr "mode" "V4SF")])
 
+(define_split
+  [(set (match_operand:V4SF 0 "register_operand" "")
+	(match_operand:V4SF 1 "zero_extended_scalar_load_operand" ""))]
+  "TARGET_SSE"
+  [(set (match_dup 0)
+	(vec_merge:V4SF
+	 (match_dup 1)
+	 (vec_duplicate:V4SF (float:SF (const_int 0)))
+	 (const_int 1)))])
+
 (define_insn "movv4si_internal"
   [(set (match_operand:V4SI 0 "nonimmediate_operand" "=x,m")
 	(match_operand:V4SI 1 "nonimmediate_operand" "xm,x"))]
@@ -18244,6 +18293,16 @@
   "movdqa\t{%1, %0|%0, %1}"
   [(set_attr "type" "ssemov")
    (set_attr "mode" "V4SF")])
+
+(define_split
+  [(set (match_operand:V2DF 0 "register_operand" "")
+	(match_operand:V2DF 1 "zero_extended_scalar_load_operand" ""))]
+  "TARGET_SSE2"
+  [(set (match_dup 0)
+	(vec_merge:V2DF
+	 (match_dup 1)
+	 (vec_duplicate:V2DF (float:DF (const_int 0)))
+	 (const_int 1)))])
 
 (define_insn "movv8qi_internal"
   [(set (match_operand:V8QI 0 "nonimmediate_operand" "=y,m")
