* i386.md (negdf splitter): Fix construction of the constant.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58638 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue Oct 29 23:28:10 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (negdf splitter): Fix construction of the constant.
+
 Tue Oct 29 20:47:06 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (negsf, negdf): Reorganize to use vector modes
