--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -9679,6 +9679,7 @@
 
 	  operands[1] = force_reg (DFmode, operands[1]);
 	  operands[0] = force_reg (DFmode, operands[0]);
+	  imm = gen_lowpart (DFmode, imm);
 	  reg = force_reg (V2DFmode,
 			   gen_rtx_CONST_VECTOR (V2DFmode,
 			     gen_rtvec (2, imm, CONST0_RTX (DFmode))));
