--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -18254,9 +18254,13 @@
   "TARGET_SSE"
   [(set (match_dup 0)
 	(vec_merge:V4SF
-	 (match_dup 1)
-	 (vec_duplicate:V4SF (float:SF (const_int 0)))
-	 (const_int 1)))])
+	 (vec_duplicate:V4SF (match_dup 1))
+	 (match_dup 2)
+	 (const_int 1)))]
+{
+  operands[1] = simplify_gen_subreg (SFmode, operands[1], V4SFmode, 0);
+  operands[2] = CONST0_RTX (V4SFmode);
+})
 
 (define_insn "movv4si_internal"
   [(set (match_operand:V4SI 0 "nonimmediate_operand" "=x,m")
@@ -18289,11 +18293,30 @@
 (define_insn "movv2di_internal"
   [(set (match_operand:V2DI 0 "nonimmediate_operand" "=x,m")
 	(match_operand:V2DI 1 "nonimmediate_operand" "xm,x"))]
-  "TARGET_SSE"
-  ;; @@@ let's try to use movaps here.
-  "movdqa\t{%1, %0|%0, %1}"
+  "TARGET_SSE2"
+{
+  if (get_attr_mode (insn) == MODE_V4SF)
+    return "movaps\t{%1, %0|%0, %1}";
+  else
+    return "movdqa\t{%1, %0|%0, %1}";
+}
   [(set_attr "type" "ssemov")
-   (set_attr "mode" "V4SF")])
+   (set (attr "mode")
+        (cond [(eq_attr "alternative" "0")
+		 (if_then_else
+		   (ne (symbol_ref "optimize_size")
+		       (const_int 0))
+		   (const_string "V4SF")
+		   (const_string "TI"))
+	       (eq_attr "alternative" "1")
+		 (if_then_else
+		   (ior (ne (symbol_ref "TARGET_SSE_TYPELESS_STORES")
+			    (const_int 0))
+			(ne (symbol_ref "optimize_size")
+			    (const_int 0)))
+		   (const_string "V4SF")
+		   (const_string "TI"))]
+	       (const_string "TI")))])
 
 (define_split
   [(set (match_operand:V2DF 0 "register_operand" "")
@@ -18301,9 +18324,13 @@
   "TARGET_SSE2"
   [(set (match_dup 0)
 	(vec_merge:V2DF
-	 (match_dup 1)
-	 (vec_duplicate:V2DF (float:DF (const_int 0)))
-	 (const_int 1)))])
+	 (vec_duplicate:V2DF (match_dup 1))
+	 (match_dup 2)
+	 (const_int 1)))]
+{
+  operands[1] = simplify_gen_subreg (DFmode, operands[1], V2DFmode, 0);
+  operands[2] = CONST0_RTX (V2DFmode);
+})
 
 (define_insn "movv8qi_internal"
   [(set (match_operand:V8QI 0 "nonimmediate_operand" "=y,m")
@@ -18875,10 +18902,19 @@
    (set_attr "mode" "V4SF")])
 
 (define_insn "sse_loadss"
+  [(match_operand:V4SF 0 "register_operand" "=x")
+   (match_operand:SF 1 "memory_operand" "m")]
+  "TARGET_SSE"
+{
+  emit_insn (gen_sse_loadss_1 (operands[0], operands[1],
+			       CONST0_RTX (V4SFmode)));
+})
+
+(define_insn "sse_loadss_1"
   [(set (match_operand:V4SF 0 "register_operand" "=x")
 	(vec_merge:V4SF
-	 (match_operand:V4SF 1 "memory_operand" "m")
-	 (vec_duplicate:V4SF (float:SF (const_int 0)))
+	 (vec_duplicate:V4SF (match_operand:SF 1 "memory_operand" "m"))
+	 (match_operand:V4SF 2 "const0_operand" "X")
 	 (const_int 1)))]
   "TARGET_SSE"
   "movss\t{%1, %0|%0, %1}"
@@ -22287,10 +22323,19 @@
    (set_attr "mode" "V2DF")])
 
 (define_insn "sse2_loadsd"
+  [(match_operand:V2DF 0 "register_operand" "=x")
+   (match_operand:DF 1 "memory_operand" "m")]
+  "TARGET_SSE2"
+{
+  emit_insn (gen_sse2_loadsd_1 (operands[0], operands[1],
+			        CONST0_RTX (V2DFmode)));
+})
+
+(define_insn "sse2_loadsd_1"
   [(set (match_operand:V2DF 0 "register_operand" "=x")
 	(vec_merge:V2DF
-	 (match_operand:DF 1 "memory_operand" "m")
-	 (vec_duplicate:DF (float:DF (const_int 0)))
+	 (vec_duplicate:V2DF (match_operand:DF 1 "memory_operand" "m"))
+	 (match_operand:V2DF 2 "const0_operand" "X")
 	 (const_int 1)))]
   "TARGET_SSE2"
   "movsd\t{%1, %0|%0, %1}"
